# octave.rs

./: Cargo.toml
lsp-textdocument/: Cargo.toml
lsp-textdocument/src/: lib.rs
octave-lsp/: Cargo.toml
octave-lsp/src/: main.rs  model.rs
octave-lsp/vscode-client/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package.json  tsconfig.json
octave-lsp/vscode-client/examples/: test.m
octave-lsp/vscode-client/src/: extension.ts
octave-lsp/vscode-client/src/services/: configuration.ts  logger.ts
octave-lsp/vscode-client/syntaxes/: octave.tmLanguage
octave-parser/: Cargo.toml
octave-parser/src/: ast.rs  grammar.pest  lib.rs  node.rs  parser.rs  value.rs
octave-typesystem/: Cargo.toml
octave-typesystem/src/: lib.rs
