[package]
name = "octave-lsp"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flurry = "0.3"
lsp-textdocument = { path = "../lsp-textdocument" }
octave-parser = { path = "../octave-parser" }
thiserror = "1.0"
tower-lsp = "0.13"
tokio = { version = "0.2", features = ["full"]}